Fixed dragging on the edges + zoom when dragging + ctrl s on a procedural field + added a new way to drag the screen (ctrl + RMB | shift + RMB)

--- a/src/logic/App/AppStyle.css
+++ b/src/logic/App/AppStyle.css
@@ -76,6 +76,7 @@ input:not([type="checkbox"]) {
 
 .open-subgraph-btn {
     display: inline-block;
+    line-height: 1.5em;
 }
 .remove-btn {
     text-align: right;
@@ -183,6 +184,7 @@ polyline {
     position: fixed;
     /*background-color: #ffffff0d;*/
     z-index: 1000;
+    pointer-events: none;
 }
 .bottom-max {
     bottom: 0px;
